# Sockets

./: .gitignore  CMakeLists.txt  README.md
src/: asynchronous_TCP.cpp  asynchronous_UDP.cpp  synchronous_TCP.cpp  synchronous_TCP_2.cpp  synchronous_UDP.cpp
src/asynchronous_message/: Basics.cpp  C_client.h  C_server.h
